docs/source/static/theme-overrides.css
/* Turn the navigation sidebar green. */
.wy-side-nav-search {
 background-color: #397e57;
}
.wy-nav-side {
  background-color: #1E432E;
}
/* With white text. */
.wy-menu-vertical a {
  color: #FFF;
}
/* The CONTENTS: title in the side-bar. */
.wy-menu-vertical p.caption {
  color: #76D5FF;
}

/* Move padding beneath the last contents entry so that there isn't
   a silly little green stub poking out under the scrollbar. */
.wy-nav-side { padding-bottom: unset; }
.wy-menu-vertical { padding-bottom: 1em; }

/* Turn `.. note::` and `.. seealso::` etc green. */
.rst-content .note, .rst-content .seealso, .rst-content .wy-alert-info.admonition, .rst-content .wy-alert-info.admonition-todo, .rst-content .wy-alert-info.attention, .rst-content .wy-alert-info.caution, .rst-content .wy-alert-info.danger, .rst-content .wy-alert-info.error, .rst-content .wy-alert-info.hint, .rst-content .wy-alert-info.important, .rst-content .wy-alert-info.tip, .rst-content .wy-alert-info.warning, .wy-alert.wy-alert-info {
  background: #e7faf2;
}
.rst-content .note .admonition-title, .rst-content .note .wy-alert-title, .rst-content .seealso .admonition-title, .rst-content .seealso .wy-alert-title, .rst-content .wy-alert-info.admonition-todo .admonition-title, .rst-content .wy-alert-info.admonition-todo .wy-alert-title, .rst-content .wy-alert-info.admonition .admonition-title, .rst-content .wy-alert-info.admonition .wy-alert-title, .rst-content .wy-alert-info.attention .admonition-title, .rst-content .wy-alert-info.attention .wy-alert-title, .rst-content .wy-alert-info.caution .admonition-title, .rst-content .wy-alert-info.caution .wy-alert-title, .rst-content .wy-alert-info.danger .admonition-title, .rst-content .wy-alert-info.danger .wy-alert-title, .rst-content .wy-alert-info.error .admonition-title, .rst-content .wy-alert-info.error .wy-alert-title, .rst-content .wy-alert-info.hint .admonition-title, .rst-content .wy-alert-info.hint .wy-alert-title, .rst-content .wy-alert-info.important .admonition-title, .rst-content .wy-alert-info.important .wy-alert-title, .rst-content .wy-alert-info.tip .admonition-title, .rst-content .wy-alert-info.tip .wy-alert-title, .rst-content .wy-alert-info.warning .admonition-title, .rst-content .wy-alert-info.warning .wy-alert-title, .rst-content .wy-alert.wy-alert-info .admonition-title, .wy-alert.wy-alert-info .rst-content .admonition-title, .wy-alert.wy-alert-info .wy-alert-title {
  background: #397e57;
}

/* --- Inline literals. --- */
.rst-content code.literal, .rst-content tt.literal {
  color: #034040;
  background: #0000;
  border: #0000;
  padding: 2px 2px;
  font-weight: 100;
}
.rst-content a code.literal, .rst-content a tt.literal {
  border-bottom: solid 1px #0001;
}
/* Inline literals in tables. */
.rst-content table.docutils .code.literal {
  /* Keep the fonts but lose the border box. Enable word wrapping. */
  border-bottom: #0000;
  white-space: normal;
}
/* Inline literals in admonitions. */
.rst-content .admonition .code.literal, .rst-content .admonition code {
  /* These blend into the background too much. Make them more prominent. */
  background: #FCFCFCA0;
  border-bottom: none;
  padding: 2px 5px;
}
/* Inline literals written as
    | ``foo``
    | ``bar``
   Should enable wrapping but subsequent lines should be indented. */
.rst-content .line code.literal,
.rst-content .line tt.literal{
  display: inline-block;
  padding-left: 50px;
  text-indent: -50px;
  padding-bottom: 0px;
}

/* Use different color code-blocks for C and Python. */
div[class*="highlight-C"] .highlight, .highlight-c > .highlight{
  background: #F7FAFF;
  color: #111;
}
div[class*="highlight-py"] .highlight, div[class*="highlight-default"] .highlight{
  background: #F7FFE6;
  color: #111;
}

/* Enable text wrapping in tables. */
.wy-table-responsive table td, .wy-table-responsive table th {
    white-space: normal;
}

/* Enable custom :strikethrough: role. */
.strikethrough {
  text-decoration: line-through;
}

/* Space out bullet point lists in custom `.. rst-class:: spacious` blocks. */
.rst-content .section ul.spacious li {
  margin-bottom: 18px;
}

/* Make the sidebar shrink if the window is narrow (e.g. panel left-ed). */
.wy-nav-side {
  width: min(28%, 300px);
}
.wy-side-scroll, .wy-side-nav-search, .wy-menu-vertical {
  width: 100%;
}
.wy-nav-content-wrap {
  margin-left: min(28%, 300px);
}

/* Custom `.. rst-class:: in-red` blocks. */
.in-red {
  color: darkred;
}

